# nlu_interface

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  rviz_common_plugins.xml
include/nlu_interface/: instruction_panel.hpp  llm_interface.py
nlu_interface/: setup.py
nlu_interface/config/: anthropic_config.yaml  config.yaml  llm_config.yaml  ollama_wayfarer.yaml  openai_config.yaml  test_config.yaml
nlu_interface/examples/: anthropic_test.py  language_interface_test.py  test.py  test_ollama.py
nlu_interface/resources/labelspaces/: scene_camp_buckner_label_space.yaml  scene_courtyard_label_space.yaml  scene_outdoor_label_space.yaml
nlu_interface/resources/prompts/: prompt_pddl_planner.yaml
nlu_interface/src/nlu_interface/: config.py  interface.py  llm_interface.py  prompt.py
nlu_interface/src/nlu_interface/resources/: prompt.yaml  (+2 more)
nlu_interface_dcist/: setup.py
nlu_interface_dcist/config/: ollama_wayfarer.yaml  openai_config.yaml
nlu_interface_dcist/config/iser_ctp_config/: anthropic_anthropic.claude-3-7-sonnet-20250219-v1.yaml  anthropic_claude-3-5-haiku-20241022.yaml  ollama_wayfarer_deepseek_r1_8b_think.yaml  ollama_wayfarer_gemma3_1b.yaml  ollama_wayfarer_gemma3_27b.yaml  ollama_wayfarer_gemma3_4b.yaml  ollama_wayfarer_llama3_2_3b.yaml  ollama_wayfarer_qwen3_06b_think.yaml  ollama_wayfarer_qwen3_8b.yaml  ollama_wayfarer_qwen3_8b_think.yaml  ollama_wayfarer_qwen_32b.yaml  ollama_wayfarer_qwen_32b_think.yaml  openai_gpt-4o-mini-2024-07-18.yaml
nlu_interface_dcist/config/iser_tamp_config/: anthropic_anthropic.claude-3-5-sonnet-20241022-v2:0.yaml  ollama_wayfarer_deepseek_r1_32b.yaml  ollama_wayfarer_deepseek_r1_32b_think.yaml  ollama_wayfarer_deepseek_r1_8b.yaml  ollama_wayfarer_llama3_1_8b.yaml  ollama_wayfarer_qwen3_06b.yaml  openai_gpt-4.1-2025-04-14.yaml  openai_gpt-4.1-mini-2025-04-14.yaml  openai_gpt-4.1-nano-2025-04-14.yaml
nlu_interface_dcist/examples/: instruction_to_pddl_problem_file.py  language_interface_test.py
nlu_interface_dcist/resources/prompts/: prompt.yaml  prompt_camp_buckner.yaml  prompt_tamp.yaml
nlu_interface_dcist/scripts/: evaluate_instructions.py  get_scene_graph_prompt.py  tamp_evaluate_instructions.py
nlu_interface_dcist/src/nlu_interface_dcist/: language_planning_interface.py  prompt.py
nlu_interface_rviz/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
nlu_interface_rviz/include/nlu_interface_rviz/: instruction_panel.hpp  manipulation_approval_panel.hpp
nlu_interface_rviz/msg/: ManipulationApprovalRequest.msg  ManipulationApprovalResponse.msg
nlu_interface_rviz/src/: instruction_panel.cpp  manipulation_approval_panel.cpp
resources/prompts/: prompt_pddl_planner.yaml
src/: instruction_panel.cpp
(+19 files in other folders)
